--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <p>Reach out to tomashrncir1@gmail.com and we can chat more.</p>
 
-<footer>
+<footer id="contact">
 	<div>
         <img href="/" aria-current="page" src="img/Logo.png" width="40" alt="" alt="Tomas Hrncir Logo">
     </div>
