--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 <img src="img/About Me/Profile pic.png" alt="Tomas profile picture" width="500" loading="lazy" >
 
 
-<footer>
+<footer id="contact">
 	<div>
         <img href="/" aria-current="page" src="img/Logo.png" width="40" alt="" alt="Tomas Hrncir Logo">
     </div>
